date and squares

--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -3,8 +3,42 @@ background-color: yellow;
 color: blue;
 }
 li{
-  color: red;
+  color: white;
+  font-size: 20px;
+  font:"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 h1{
   color: green;
+}
+.topbox {
+  width:250px;
+  height:110px;
+}
+.square {
+    float:left;
+    position: relative;
+    width: 50px;
+    padding-bottom : 50px; /* = width for a 1:1 aspect ratio */
+    margin:1.66%;
+    overflow:hidden;
+    background-color:red;
+}
+
+.content {
+    position:absolute;
+    height:80%; /* = 100% - 2*10% padding */
+    width:90%; /* = 100% - 2*5% padding */
+    padding: 10% 5%;
+}
+
+.table{
+    display:table;
+    height:100%;
+    width:100%;
+}
+.table-cell{
+    display:table-cell;
+    vertical-align:middle;
+    height:100%;
+    width:100%;
 }
