--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -1,24 +1,36 @@
 p{
-background-color: yellow;
+/*background-color: yellow;*/
 color: blue;
+font-size:10px;
 }
 li{
   color: white;
-  font-size: 20px;
+  font-size: 30px;
   font:"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 h1{
   color: green;
 }
-.topbox {
+.topbox_main{
   width:250px;
-  height:110px;
+}
+.topbox1 {
+  float: left;
+  width:125px;
+  padding-bottom : 40%;
+
+}
+.topbox2 {
+  float: right;
+  width:125px;
+  padding-bottom : 40%;
+ 
 }
 .square {
     float:left;
     position: relative;
-    width: 50px;
-    padding-bottom : 50px; /* = width for a 1:1 aspect ratio */
+    width: 40%;
+    padding-bottom : 40%; /* = width for a 1:1 aspect ratio */
     margin:1.66%;
     overflow:hidden;
     background-color:red;
@@ -26,8 +38,8 @@ h1{
 
 .content {
     position:absolute;
-    height:80%; /* = 100% - 2*10% padding */
-    width:90%; /* = 100% - 2*5% padding */
+    height:80%; 
+    width:90%; 
     padding: 10% 5%;
 }
 
