--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -15,13 +15,13 @@ li{
   width:250px;
 }
 .topbox1 {
-  float: left;
+  /*float: left;*/
   width:125px;
   padding-bottom : 40%;
 
 }
 .topbox2 {
-  float: right;
+  /*float: right;*/
   width:125px;
   padding-bottom : 40%;
  
