working on using javascript in Shiny

--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -3,11 +3,13 @@
 color: blue;
 font-size:10px;
 }*/
-li{
+
+/*li{
   color: white;
   font-size: 30px;
   font:"Helvetica Neue",Helvetica,Arial,sans-serif;
-}
+}*/
+
 /*h1{
   color: green;
 }*/
