--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -31,9 +31,38 @@ font-size:10px;
   display:inline-block;
   position:relative;
   width:30%;
-  
- 
 }
+ 
+.longbox  {
+  display:inline-block;
+  width: 300px;
+  
+}
+
+.p1 {
+  color:black;
+  
+}
+
+.vbox {
+  display:inline-block;
+  width:40%;
+  height:50px;
+  
+}
+
+.squarev {
+    /*float:left;*/
+    display:inline-block;
+    position: relative;
+    width: 15%;
+    height:50px;
+    /*padding-bottom : 40%;*/ /* = width for a 1:1 aspect ratio */
+    margin:1.66%;
+    overflow:hidden;
+    /*background-color:red;*/
+} 
+ 
 .square {
     float:left;
     position: relative;
