--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -44,14 +44,14 @@ font-size:10px;
   
 }
 
-.vbox {
+.ibox {
   display:inline-block;
   width:40%;
   height:50px;
   
 }
 
-.squarev {
+.squarei {
     /*float:left;*/
     display:inline-block;
     position: relative;
