--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -44,10 +44,11 @@ font-size:10px;
   
 }
 
+
 .ibox {
   display:inline-block;
   width:40%;
-  height:50px;
+  height:25px;
   
 }
 
@@ -56,11 +57,13 @@ font-size:10px;
     display:inline-block;
     position: relative;
     width: 15%;
-    height:50px;
+    height:25px;
     /*padding-bottom : 40%;*/ /* = width for a 1:1 aspect ratio */
-    margin:1.66%;
+    /*margin:1.66%;*/
     overflow:hidden;
     /*background-color:red;*/
+    margin:0;
+    padding:0;
 } 
  
 .square {
