--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -129,7 +129,7 @@ font-size:10px;
     height:45px;/*100%;*/
     width:50px;/*100%;*/
     text-align:center;
-    background-color:silver;
+    /*background-color:silver;*/
 }
 
 .table-cell2{
