--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -1,18 +1,3 @@
-/*p{
-
-color: blue;
-font-size:10px;
-}*/
-
-/*li{
-  color: white;
-  font-size: 30px;
-  font:"Helvetica Neue",Helvetica,Arial,sans-serif;
-}*/
-
-/*h1{
-  color: green;
-}*/
 
 .shiny-html-output {
 
@@ -22,66 +7,144 @@ font-size:10px;
   
 }
 
+/*p{
+
+color: blue;
+font-size:10px;
+}*/
+li {
+  color: white;
+  font-size: 25px;
+  font:"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+/*h1{
+  color: green;
+}*/
+
+/*.topbox_main{
+  width:250px;
+}*/
+
+/*.info-box{
+  height: 50px;
+}*/
+.title {
+  font-size:27px;
+  font-weight:bold;
+}
+
+.box {
+  margin:0;
+  padding:0;
+}
 
 .topbox_main{
-  /*width:180px;*/
- 
   
   
- 
 }
+
 .topbox1 {
   /*float: left;*/
   display:inline-block;
-  width:25%;
-  position:relative;
-  
+  width:125px;
+  padding-bottom : 40%;
 
 }
 .topbox2 {
   /*float: right;*/
   display:inline-block;
-  position:relative;
-  width:25%;
+  width:125px;
+  padding-bottom : 40%;
+ 
 }
 
 .sidebox {
   display:inline-block;
-  position:relative;
-  width:20%;
-  height: 50px;
+  position:absolute; /*relative;*/
+  width:75px;
+  /*height: 50px;*/
 }
+
  
 .longbox  {
   display:inline-block;
-  width: 300px;
+  width: 100%;
   
 }
 
 .p1 {
   color:black;
+  font-size:20px;
+}
+
+.p2 {
+  color:black;
+  font-weight:bold;
+  margin:auto;
+  padding:0;
+  font-size:20px;
   
 }
 
 .p3 {
+  margin:auto;
   color:black;
-  font-size:7px;
+  font-size:15px;
+}
+
+.p4 {
+  color:black;
+  font-size:25px;
+}
+
+.p5 {
+  color:black;
+  font-size:17px;
 }
 
 .ibox {
   display:inline-block;
-  width:40%;
+  width:60%;
   height:25px;
   
 }
 
+.squareside1 {
+    /*float:left;*/
+    display:inline-block;
+    position: relative;
+    width: 100%;
+    height:70px;
+    /*padding-bottom : 40%;*/ /* = width for a 1:1 aspect ratio */
+    /*margin:1.66%;*/
+    overflow:hidden;
+    /*background-color:red;*/
+    margin:0;
+    padding:0;
 
+} 
+
+.squareside2 {
+    /*float:left;*/
+    display:inline-block;
+    position: relative;
+    width: 100%;
+    height:25px;
+    /*padding-bottom : 40%;*/ /* = width for a 1:1 aspect ratio */
+    /*margin:1.66%;*/
+    overflow:hidden;
+    /*background-color:red;*/
+    margin:0;
+    padding:0;
+    border: 3px solid black;
+
+} 
 
 .squarei {
     /*float:left;*/
     display:inline-block;
     position: relative;
-    width: 15%;
+    width: 25%;
     height:25px;
     /*padding-bottom : 40%;*/ /* = width for a 1:1 aspect ratio */
     /*margin:1.66%;*/
@@ -90,26 +153,28 @@ font-size:10px;
     margin:0;
     padding:0;
 } 
- 
+
 .square {
     float:left;
     position: relative;
+    border: 3px solid black;
+    text-align:center;
     width: 40%;
     padding-bottom : 40%; /* = width for a 1:1 aspect ratio */
     margin:1.66%;
     overflow:hidden;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     /*background-color:red;*/
 }
 
 .my_content {
     position:absolute;
-    float:left;
     margin: 0;
     padding: 0;
     font-size:10px;
-    font-weight: bold;
+    /*font-weight: bold;*/
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:white;
+    color:black;
     
     /*height:80%; 
     width:90%;
@@ -117,25 +182,32 @@ font-size:10px;
     /*background-color: blue;*/
 }
 
+
 .table{
     display:table;
     height:100%;
     width:100%;
-    
 }
 .table-cell{
     display:table-cell;
     vertical-align:middle;
-    height:45px;/*100%;*/
-    width:50px;/*100%;*/
-    text-align:center;
-    /*background-color:silver;*/
+    height:60px;
+    width:50px;
 }
+
 
 .table-cell2{
     display:table-cell;
-    vertical-align:middle;
+    /*vertical-align:middle;*/
     height:100%;
     width:100%;
+    text-align:center;
+}
+
+.table-cell3{
+    display:table-cell;
+    /*vertical-align:middle;*/
+    height:100%;
+    width:100px;
     text-align:center;
 }
