--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -39,6 +39,8 @@ li {
 }
 
 .topbox_main{
+  background:red;
+  height:125px;
 }
 
 .leaflet-container {
@@ -51,6 +53,7 @@ li {
   display:inline-block;
   width:125px;
   padding-bottom : 40%;
+  background:blue;
 
 }
 .topbox2 {
@@ -58,7 +61,14 @@ li {
   display:inline-block;
   width:125px;
   padding-bottom : 40%;
- 
+  background:blue;
+}
+
+.topboxmiddle {
+  display:inline-block;
+  width:25px;
+  padding-bottom : 40%;
+  background:blue;
 }
 
 .sidebox {
@@ -66,6 +76,7 @@ li {
   position:absolute; /*relative;*/
   width:75px;
   /*height: 50px;*/
+  background:blue;
 }
 
  
@@ -75,7 +86,12 @@ li {
   
 }
 
+p {
+  background:yellow;
+}
+
 .p1 {
+  background:green;
   color:black;
   font-size:20px;
 }
@@ -110,6 +126,12 @@ li {
   width:60%;
   height:25px;
   
+}
+.tallsquare{
+    display:inline-block;
+    position: relative;
+    margin:0;
+    padding:0;
 }
 
 .squareside1 {
